Add Layers Tests and rework query language